fix: change newsletter section flex direction to column on mobile devices

--- a/src/components/newsletter/newsletter.module.scss
+++ b/src/components/newsletter/newsletter.module.scss
@@ -58,6 +58,8 @@
 .newsletter-subscribe {
   .newsletter-subscribe-upper {
     display: flex;
+    flex-direction: column;
+    gap: 1rem;
 
     &__input {
       width: 100%;
@@ -76,6 +78,12 @@
     }
 
     @media screen {
+
+      @media (width >= 768px) {
+        flex-direction: row;
+        gap: 0rem;
+      }
+
       @media (width > 1024px) {
   
         .newsletter-btn {
